--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,73 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  /* Ebony */
+  --color-bg-page: #0F172A;
+
+  /* PattensBlue */
+  --color-text-primary: #D3E4FF;
+
+  /* Pigeon Post 100%*/
+  --color-text-secondary-100: #A2B7D9;
+  /* Pigeon Post 60%*/
+  --color-text-secondary-60: #A2B7D999;
+
+  /* Royal Blue */
+  --color-detail1: #4f4ff1;
+
+  /* Teal-300 */
+  --color-detail2-100: rgba(70, 236, 213, 1);
+  --color-detail2-90: rgba(70, 236, 213, 0.90);
+
+  /* Teal-400 */
+  --color-bg-stack-10: rgba(0, 213, 190, 0.10);
+
+  /*Dodger Blue 5%*/
+  --color-bg-hover-5: rgba(77, 131, 255, 0.05);
+  /*Dodger Blue 25%*/
+  --color-border-25: rgba(77, 131, 255, 0.25);
+  /*Dodger Blue 50%*/
+  --color-border-50: rgba(77, 131, 255, 0.30);
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --color-text-primary: var(--color-text-primary);
+  --color-text-secondary-100: var(--color-text-secondary-100);
+  --color-text-secondary-60: var(--color-text-secondary-60);
+  --color-detail1: var(--color-detail1);
+  --color-detail2-100: var(--color-detail2-100);
+  --color-detail2-90: var(--color-detail2-90);
+  --color-bg-stack-10: var(--color-bg-stack-10);
+  --color-bg-page: var(--color-bg-page);
+  --color-bg-hover-5: var(--color-bg-hover-5);
+  --color-border-25: var(--color-border-25);
+  --color-border-50: var(--color-border-50);
+  --font-sans: var(--font-inter);
+  --font-mono: var(--font-jetbrains-mono);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-bg-page font-sans text-base/relaxed font-normal text-text-secondary-100
+}
+
+.title {
+  @apply font-mono text-4xl sm:text-5xl font-bold text-text-primary mb-4
+}
+
+@layer components {
+  .subtitle {
+    @apply font-mono text-[20px] font-medium text-text-primary mb-5
+  } 
+
+  .text-area {
+    @apply w-full p-1 mb-1 border-t-[1px] bg-bg-hover-5 rounded-md border-border-25 outline-none focus:border-teal-500/50
+  }
+}
+
+label {
+  @apply text-text-primary pb-2
+}
+
+.error-msg {
+  @apply flex items-center gap-x-1 text-red-500 text-sm mt-1
 }
